--- a/index.html
+++ b/index.html
@@ -1,2 +1,10 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
+<head>
+  <title>绿海铁道官方网站</title>
+  <meta charset="UTF-8">
+  <meta name="author" content="绿海铁道LHMTR">
+  <link rel="stylesheet" href="styles.css">
+  <script src="script.js"></script>
+  <link rel="icon" href="LHMTR.png">
+</head>
