--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                     </tr>
                     <tr>
                         <th>服务器分类</th>
-                        <td>城建、铁路、航空、轮渡、缆车等/td>
+                        <td>城建、铁路、航空、轮渡、缆车等</td>
                     </tr>
                     <tr>
                         <th>是否需要正版</th>
@@ -199,17 +199,8 @@
                     <p class="text-gray-400">Minecraft 架空铁道公司</p>
                 </div>
                 <div class="flex space-x-4">
-                    <a href="#" class="text-gray-400 hover:text-white transition-colors duration-200">
-                        <i class="fa fa-weibo text-xl"></i>
-                    </a>
-                    <a href="#" class="text-gray-400 hover:text-white transition-colors duration-200">
-                        <i class="fa fa-wechat text-xl"></i>
-                    </a>
-                    <a href="#" class="text-gray-400 hover:text-white transition-colors duration-200">
+                    <a href="https://github.com/orgs/LHMTR" class="text-gray-400 hover:text-white transition-colors duration-200">
                         <i class="fa fa-github text-xl"></i>
-                    </a>
-                    <a href="#" class="text-gray-400 hover:text-white transition-colors duration-200">
-                        <i class="fa fa-youtube-play text-xl"></i>
                     </a>
                 </div>
             </div>
