--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
                     <a href="https://lhmtr.miraheze.org" class="nav-link">绿海铁道Wiki</a>
                     <a href="https://github.com/orgs/LHMTR" class="nav-link">绿海Github</a>
                     <a href="/staff-bili.html" class="nav-link">请关注我们的B站！</a>
+                    /此处以后需要更改，https://space.bilibili.com/3493139295767175?spm_id_from=333.337.0.0
                 </nav>
                 <div class="md:hidden">
                     <button id="mobile-menu-button" class="text-gray-500 hover:text-primary">
