--- a/index.html
+++ b/index.html
@@ -191,6 +191,10 @@
                             </div>
                             <i class="fa fa-chevron-down group-toggle text-xs"></i>
                         </div>
+                            <a href="/service.html" class="sidebar-link">
+                                <i class="fa fa-list-alt sidebar-icon"></i>
+                                <span>绿海铁道运营</span>
+                            </a>
                         <div class="sidebar-group-content">
                             <a href="/server-status.html" class="sidebar-link">
                                 <i class="fa fa-signal sidebar-icon"></i>
@@ -224,10 +228,6 @@
                             <a href="/building-guide.html" class="sidebar-link">
                                 <i class="fa fa-book sidebar-icon"></i>
                                 <span>建筑指南</span>
-                            </a>
-                            <a href="/project-list.html" class="sidebar-link">
-                                <i class="fa fa-list-alt sidebar-icon"></i>
-                                <span>工程列表</span>
                             </a>
                         </div>
                     </div>
