--- a/index.html
+++ b/index.html
@@ -250,9 +250,13 @@
                                 <i class="fa fa-file-archive-o sidebar-icon"></i>
                                 <span>资源包下载</span>
                             </a>
-                            <a href="/map-download.html" class="sidebar-link">
+                            <a href="/mods-download.html" class="sidebar-link">
                                 <i class="fa fa-map sidebar-icon"></i>
-                                <span>地图下载</span>
+                                <span>更多模组下载</span>
+                            </a>
+                            <a href="https://github.com/orgs/LHMTR" class="sidebar-link">
+                                <i class="fa fa-github sidebar-icon"></i>
+                                <span>绿海Github</span>
                             </a>
                         </div>
                     </div>
@@ -270,10 +274,6 @@
                             <a href="https://lhmtr.miraheze.org" class="sidebar-link">
                                 <i class="fa fa-book sidebar-icon"></i>
                                 <span>绿海Wiki</span>
-                            </a>
-                            <a href="https://github.com/orgs/LHMTR" class="sidebar-link">
-                                <i class="fa fa-github sidebar-icon"></i>
-                                <span>绿海Github</span>
                             </a>
                             <a href="/staff-bili.html" class="sidebar-link">
                                 <i class="fa fa-video-camera sidebar-icon"></i>
