--- a/index.html
+++ b/index.html
@@ -193,9 +193,8 @@
                         </div>
                             <a href="/service.html" class="sidebar-link">
                                 <i class="fa fa-list-alt sidebar-icon"></i>
-                                <span>绿海铁道运营</span>
-                            </a>
-                        <div class="sidebar-group-content">
+                                <span>运营信息</span>
+                            </a> 
                             <a href="/server-status.html" class="sidebar-link">
                                 <i class="fa fa-signal sidebar-icon"></i>
                                 <span>服务器状态</span>
@@ -251,7 +250,7 @@
                                 <span>资源包下载</span>
                             </a>
                             <a href="/mods-download.html" class="sidebar-link">
-                                <i class="fa fa-map sidebar-icon"></i>
+                                <i class="fa fa-file-archive-o sidebar-icon"></i>
                                 <span>更多模组下载</span>
                             </a>
                             <a href="https://github.com/orgs/LHMTR" class="sidebar-link">
