--- a/index.html
+++ b/index.html
@@ -195,9 +195,9 @@
                                 <i class="fa fa-list-alt sidebar-icon"></i>
                                 <span>运营信息</span>
                             </a> 
-                            <a href="/server-status.html" class="sidebar-link">
+                            <a href="/server-introduction.html" class="sidebar-link">
                                 <i class="fa fa-signal sidebar-icon"></i>
-                                <span>服务器状态</span>
+                                <span>服务器简介</span>
                             </a>
                             <a href="/server-rules.html" class="sidebar-link">
                                 <i class="fa fa-gavel sidebar-icon"></i>
@@ -345,7 +345,7 @@
                     <div id="join" class="card bg-gradient-to-br from-green-50 to-blue-50">
                         <h2 class="text-xl font-bold mb-4 text-primary">加入绿海铁道的建设团队</h2>
                         <p class="mb-4">点击这里加入我们！不需要正版！</p>
-                        <a href="/server-join.hmtr" class="btn btn-primary inline-flex items-center">
+                        <a href="/server-join.html" class="btn btn-primary inline-flex items-center">
                             <i class="fa fa-book mr-2"></i>
                             加入服务器
                         </a>
