--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <div class="container mx-auto px-4 py-3">
             <div class="flex justify-between items-center">
                 <div class="flex items-center">
-                    <img src="/lhmtr.icon" alt="绿海铁道" class="h-12 mr-3">
+                    <img src="/lhmtrlogo.png" alt="绿海铁道" class="h-12 mr-3">
                     <div>
                         <a href="index.html" class="text-2xl font-bold text-primary">绿海铁道</a>
                         <p class="text-sm text-gray-500">Minecraft 架空铁道公司</p>
